finishing touches for the ec2 launch

--- a/templates/website.html
+++ b/templates/website.html
@@ -2,7 +2,7 @@
     <title>Ajay The Amazing Data Scientist</title>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../static/css/main.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 </head>
 
@@ -88,11 +88,11 @@
                 <div class="col-md-6">
                     <div class="clearfix"></div>
                   <h2 class="section-heading">Who Am I?!?!</h2></br>
-                    <p class="lead">I'm an <a class="link" target="_blank" href="ajay_anand_resume.pdf">experienced</a> analyst, data scientist and engineer that enjoys tackling interesting and difficult problems in the world of big data. </br></br> I'm currently looking to join a team that is interested in solving interesting problems. Contact me at<a class="link" target="_blank" href="mailto:ajayanand10@gmail.com"> my email address.</a></br></br> My passion is to use my knowledge of Statistics, Data Science, and Software Engineering to help solve real world challenges. </br></br> Languages and Frameworks:</br> Python (Pandas, NumPy, sckit-learn, SciPy, StatsModels), Git, C, C++, Javascript, HTML5, CSS3, jQuery </br></br> Machine Learning/Data Engineering:</br> PostgreSQL, MongoDB, NLP, Word2Vec, Doc2Vec, NLTK, SpaCy, BeautifulSoup, AWS(EC2, S3), Spark, Hive, MapReduce, Scrapy, Neo4J, NetworkX, Plotly, Flask, Seaborn
+                    <p class="lead">I'm an <a class="link" target="_blank" href="../static/img/ajay_anand_resume.pdf">experienced</a> analyst, data scientist and engineer that enjoys tackling interesting and difficult problems in the world of big data. </br></br> I'm currently looking to join a team that is interested in solving interesting problems. Contact me at<a class="link" target="_blank" href="mailto:ajayanand10@gmail.com"> my email address.</a></br></br> My passion is to use my knowledge of Statistics, Data Science, and Software Engineering to help solve real world challenges. </br></br> Languages and Frameworks:</br> Python (Pandas, NumPy, sckit-learn, SciPy, StatsModels), Git, C, C++, Javascript, HTML5, CSS3, jQuery </br></br> Machine Learning/Data Engineering:</br> PostgreSQL, MongoDB, NLP, Word2Vec, Doc2Vec, NLTK, SpaCy, BeautifulSoup, AWS(EC2, S3), Spark, Hive, MapReduce, Scrapy, Neo4J, NetworkX, Plotly, Flask, Seaborn
                     </p> 
                 </div>
             <div class="col-md-6">
-                    <img class="img-circle img-responsive" src="kickinback2.jpg" alt="">
+                    <img class="img-circle img-responsive" src="../static/img/kickinback2.jpg" alt="">
                 </div>
         </div>
         <!-- /.container -->
@@ -179,7 +179,6 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Business Development Analyst, Technical Sales Analyst, Quality Engineer</h4>
-                        <p id="small-text" class="text-muted">Things I did Here Goes Here</p>
                     </div>
                 </div>
               <!-- End of Portfolio img4 -->
@@ -196,7 +195,6 @@
                     </a>
                     <div class="portfolio-caption">
                         <h4>Digital Media Analyst </h4>
-                        <p id="small-text" class="text-muted">Things I Did Goes Here</p>
                     </div>
                 </div>
               <!-- End of Portfolio img5 -->
@@ -212,8 +210,7 @@
                         <img src="https://pbs.twimg.com/profile_images/378800000154790032/2620e21dbb9be7a1fcc6f44087199f29_400x400.jpeg" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
-                        <h4>Digital Media Analyst</h4>
-                        <p id="small-text" class="text-muted">Things I Did Goes Here</p>
+                        <h4>Social Media Analyst</h4>
                     </div>
                 </div>
               <!-- End of Portfolio img6 -->
